--- a/package.json
+++ b/package.json
@@ -9,17 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4",
+    "@hookform/resolvers": "^2.9.11",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.14",
     "expo": "~47.0.12",
+    "expo-location": "~15.0.1",
+    "expo-network": "~5.0.0",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
+    "lottie-react-native": "5.1.4",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.43.1",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.28",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "typescript": "^4.6.3"
   },
   "private": true
